# eta

./: CMakeLists.txt  EtaAnalysis.cxx  EtaAnalysis.h  EtaCandidate.cxx  EtaCandidate.h  EtaConfig.cxx  EtaConfig.h  EtaDataTask.cxx  EtaDataTask.h  EtaHandler.cxx  EtaHandler.h  EtaHistograms.cxx  EtaHistograms.h  EtaPriCandidate.cxx  EtaPriCandidate.h  EtaPriHandler.h  EtaTask.cxx  README  TGDCandidate.cxx  TGDCandidate.h
EtaDataGrid/: EtaDataTask.cxx  EtaHandler.cxx  runGrid.C
cmake/Modules/: FindALIROOT.cmake  FindROOT.cmake
local/: build.sh  runEtaLocal.C  runLocal.C
local/tags/: CreateTags.C  runTagCreator.C
macros/: runEtaDataLocal.C
macros/EtaDataGrid/: CreateAlienHandler.C  EtaCandidate.cxx  EtaCandidate.h  EtaDataTask.h  EtaHandler.h  runGrid.C
plugin/: ConfigureCuts.C  CreateAlienHandler.C  build.sh  runGrid.C
tasks/: CMakeLists.txt  EtaAnalysis.cxx  EtaAnalysis.h  EtaCandidate.cxx  EtaCandidate.h  EtaConfig.cxx  EtaConfig.h  EtaHandler.h  EtaHistograms.cxx  EtaHistograms.h  EtaOutput.cxx  EtaOutput.h  EtaPriCandidate.cxx  EtaPriCandidate.h  EtaTask.cxx  EtaTask.h  etaparameters.h
